# py-db-adapter

./: .gitignore  mypy.ini  pyproject.toml  requirements.txt
py_db_adapter/: __init__.py
py_db_adapter/adapter/: __init__.py  db.py  db_adapter.py  db_connection.py  db_util.py  dynamic_repository.py  pyodbc_inspector.py  repository.py  sql_adapter.py  sqlalchemy_inspector.py
py_db_adapter/adapter/column_adapters/: __init__.py  boolean_column.py  date_column.py  (+5 more)
py_db_adapter/domain/: __init__.py  change_tracking_result.py  column.py  column_adapter.py  compare_rows.py  const.py  data_types.py  db_adapter.py  exceptions.py  index.py  logger.py  primary_key.py  repository.py  row_comparison_results.py  row_diff.py  rows.py  sql_adapter.py  sql_formatter.py  sql_operator.py  sql_predicate.py  sync_result.py  table.py  table_inspector.py  unique_constraint.py
py_db_adapter/service/: __init__.py  cache.py  change_tracking.py  compare_rows.py  copy_table.py  datasource.py  db_adapter.py  db_service.py  sql_generator.py  sync.py  upserter.py
tests/: .env.template  conftest.py
tests/adapter/: test_postgres_adapter.py  test_pyodbc_inspector.py
tests/domain/: test_postgres_sql_adapter.py  test_row_diff.py  test_table.py
tests/e2e/: example.py  pyodbc_test.py  sqlalchemy_test.py  test_datasource.py  test_pyodbc_postgres_db_service.py  test_sqlalchemy_postgres_db_service.py
tests/fixtures/: setup_db.sql  tear_down_db.sql
tests/integration/: test_postgres_sql_table_adapter.py
tests/service/: test_change_tracking.py  test_compare_rows.py  test_sync.py
(+84 files in other folders)
