[tool.poetry]
name = "py-db-adapter"
version = "0.1.0"
description = ""
authors = ["Mark Stefanovic <markstefanovic@hotmail.com>"]
include = ["py_db_adapter/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
pyodbc = "^4.0.30"
sqlalchemy = "^1.3.20"
pandas = "^1.1.3"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
psycopg2-binary = "^2.8.6"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
