[tool.poetry]
name = "py-db-adapter"
version = "0.1.0"
description = ""
authors = ["Mark Stefanovic <markstefanovic@hotmail.com>"]
include = ["py_db_adapter/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
pyodbc = "^4.0.30"

[tool.poetry.dev-dependencies]
psycopg2-binary = "^2.8.6"
pylint = "^2.6.0"
pytest = "^6.2.1"
python-dotenv = "^0.15.0"
mypy = "^0.790"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
